--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1088,7 +1088,7 @@ https://github.com/Alexander-Miller/treemacs
     :defer t
     :init
     (with-eval-after-load 'winum
-      (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+      (define-key winum-keymap (kbd "M-o") #'treemacs-select-window))
     :config
     (progn
       (setq treemacs-collapse-dirs                   (if treemacs-python-executable 3 0)
