[emacs][crux] Join Line Keybinding

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -411,13 +411,12 @@ Emacs Global Bindings are redefined here.
      ("C-x K" . crux-kill-other-buffers)
      ("C-k" . crux-smart-kill-line)
      ("M-j" . crux-top-join-line))
+    (:map nc-map ("C-j" . crux-top-join-line))
     :config
     (crux-with-region-or-buffer indent-region)
     (crux-with-region-or-buffer untabify)
     (crux-with-region-or-point-to-eol kill-ring-save)
     (defalias 'rename-file-and-buffer #'crux-rename-file-and-buffer))
-
-
 #+end_src
 
 *** Exec Path From Shell
