--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1376,6 +1376,10 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
 #+begin_src emacs-lisp
   (use-package lsp-mode
     :commands lsp
+    :bind-keymap ("C-< l" . lsp-command-map)
+    :hook (lsp-mode . (lambda ()
+                        (let ((lsp-keymap-prefix "C-< l"))
+                          (lsp-enable-which-key-integration))))
     :config
     (setq ; recommended
           gc-cons-threshold (* 100 1024 1024)
@@ -1397,9 +1401,22 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
           ))
 
   ;; optionally
-  (use-package lsp-ui :commands lsp-ui-mode)
+  (use-package lsp-ui
+    :commands lsp-ui-mode
+    :config
+    (setq lsp-ui-doc-position 'at-point
+          lsp-ui-doc-alignment 'window))
 
   (use-package lsp-treemacs :commands lsp-treemacs-errors-list)
+#+end_src
+
+This function adds the hooks that will enable LSP-powered formatting
+and import organizing when saving a file with code.
+
+#+begin_src elisp
+  (defun lsp-save-hooks () "Install save hooks for lsp."
+         (add-hook 'before-save-hook #'lsp-format-buffer t t)
+         (add-hook 'before-save-hook #'lsp-organize-imports t t))
 #+end_src
 
 ** Programming
@@ -1410,7 +1427,8 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
     :hook
     ((clojure-mode . lsp)
      (clojurec-mode . lsp)
-     (clojurescript-mode . lsp))
+     (clojurescript-mode . lsp)
+     (clojure-mode . lsp-save-hooks))
     :init
     (setq clojure-align-forms-automatically t))
 #+end_src
