[emacs] Upadte better default configuration

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -218,7 +218,8 @@ Small configs for better emacs experience...
         delete-by-moving-to-trash t
         confirm-nonexistent-file-or-buffer nil
         query-replace-highlight t
-        ring-bell-function 'ignore)
+        ring-bell-function 'ignore
+        sentence-end-double-space nil)
  #+end_src
 
 **** Transparently open compressed files
