[emacs][orgmode] Go to archives

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1682,6 +1682,7 @@ Change priorities colors
      (defconst nc/org-default-projects-dir (concat org-directory "/projects"))
      (defconst nc/org-default-projects-file (concat org-directory "/projects.org"))
      (defconst nc/org-default-resources-dir (concat org-directory "/resources"))
+     (defconst nc/org-default-archives-dir (concat org-directory "/archives"))
      (defconst nc/org-default-personal-dir (concat org-directory "/personal"))
      (defconst nc/org-default-completed-dir (concat org-directory "/projects/_completed"))
      (defconst nc/org-journal-dir (concat org-directory "/journal"))
@@ -1706,14 +1707,21 @@ Change priorities colors
        (beginning-of-line))
 
      (bind-key "gi" 'nc/goto-inbox nc-map)
-  
+
 
      (defun nc/goto-resources-dir ()
        (interactive)
        (dired nc/org-default-resources-dir))
-  
+
      (bind-key "gR" 'nc/goto-resources-dir nc-map)
-     )
+
+     (defun nc/goto-archives-dir ()
+       (interactive)
+       (dired nc/org-default-archives-dir))
+
+     (bind-key "gA" 'nc/goto-archives-dir nc-map)
+
+   )
  #+end_src
 
 
