[emacs] Fix refiling problem

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2021,7 +2021,7 @@ Documentation : http://www.howardism.org/Technical/Emacs/getting-more-boxes-done
              (props   (org-entry-properties)))
 
         (list :region     (list (plist-get attrs :begin) (plist-get attrs :end))
-              :header     (plist-get attrs :title)
+              :header     (plist-get attrs :raw-value) ; Use :raw-value because :title returns too more stuff
               :tags       (nc--org-get-subtree-tags props)
               :properties (nc--org-get-subtree-properties attrs)
               :body       (nc--org-get-subtree-content attrs)))))
