[emacs] Restore LSP UI

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2491,7 +2491,7 @@ Programming configuration module automatically tangled in =./lisp/setup-programm
   (use-package lsp-ui
     :commands lsp-ui-mode
     :config
-    (setq lsp-ui-doc-position 'at-point
+    (setq lsp-ui-doc-position 'top
           lsp-ui-doc-alignment 'window))
 
   (use-package lsp-treemacs :commands lsp-treemacs-errors-list)
