--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -491,6 +491,8 @@ Using moe theme dark all the day
     (doom-themes-visual-bell-config)
 
     ;; or for treemacs users
+    (setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
+    (doom-themes-treemacs-config)
     ;;(doom-themes-treemacs-config)
 
     ;; Corrects (and improves) org-mode's native fontification.
