Update LSP commands

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2504,6 +2504,10 @@ Programming configuration module automatically tangled in =./lisp/setup-programm
           lsp-lens-enable t
           lsp-semantic-tokens-enable t
 
+
+          lsp-headerline-breadcrumb-enable nil ;; disable breadcrumb
+
+
           ;; Conflicts with other Clojure emacs packages
           cljr-add-ns-to-blank-clj-files nil ; disable clj-refactor adding ns to blank files
           cider-eldoc-display-for-symbol-at-point nil ; disable cider eldoc integration
@@ -2515,11 +2519,18 @@ Programming configuration module automatically tangled in =./lisp/setup-programm
   ;; optionally
   (use-package lsp-ui
     :commands lsp-ui-mode
+    :init
+    (setq lsp-ui-doc-alignment 'at-point
+          lsp-ui-doc-use-childframe nil)
     :config
-    (setq lsp-ui-doc-position 'top
-          lsp-ui-doc-alignment 'window))
+      ;; WORKAROUND Hide mode-line of the lsp-ui-imenu buffer
+      ;; @see https://github.com/emacs-lsp/lsp-ui/issues/243
+      (defadvice lsp-ui-imenu (after hide-lsp-ui-imenu-mode-line activate)
+        (setq mode-line-format nil))
+    )
 
-  (use-package lsp-treemacs :commands lsp-treemacs-errors-list)
+  (use-package lsp-treemacs
+    :commands lsp-treemacs-errors-list)
 #+end_src
 
 This function adds the hooks that will enable LSP-powered formatting
