Remove narrow to subtree

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1795,7 +1795,7 @@ I have my own template for creating new projects
      (progn
        (org-capture nil "d")
        (org-capture-finalize t)
-       (org-narrow-to-subtree)
+       ;;(org-narrow-to-subtree)
        (org-clock-in)))
 
    (bind-key "oD" 'nc/org-insert-daily-review nc-map)
