Update Daily Review

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1581,6 +1581,7 @@ Insert daily heading in journal file =C-<-o-d=
 
              ))
 
+
      (defun nc/insert-daily-heading ()
        "Insert Daily Heading in journal file"
        (interactive)
@@ -1592,6 +1593,8 @@ Insert daily heading in journal file =C-<-o-d=
              (progn
                (org-insert-heading-after-current)
                (nc/journal-file-insert)
+               (if (search-backward (format-time-string "%A"))
+                   (beginning-of-line))
                (org-shiftmetaright))
            (error "Insert failed"))))
 
@@ -1795,7 +1798,6 @@ I have my own template for creating new projects
      (progn
        (org-capture nil "d")
        (org-capture-finalize t)
-       ;;(org-narrow-to-subtree)
        (org-clock-in)))
 
    (bind-key "oD" 'nc/org-insert-daily-review nc-map)
