--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2436,6 +2436,12 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
   ;; (when is-windows  
   ;;   (add-to-list 'exec-path "C:/ProgramJava/tools/sqlite-tools-win32-x86-3340100"))
 
+  ;; From https://baty.net/2022/searching-org-roam-files/
+  (defun nc/search-roam ()
+    "Run consult-ripgrep on the org roam directory"
+    (interactive)
+    (consult-ripgrep (concat org-directory "/slipbox") nil))
+
   (use-package org-roam
     :after org
     :custom
@@ -2446,6 +2452,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     ("C-c n l" . org-roam-buffer-toggle)
     ("C-c n f" . org-roam-node-find)
     ("C-c n r" . org-roam-node-random)
+    ("C-c n s" . nc/search-roam)
     (:map org-mode-map
           (("C-c n i" . org-roam-node-insert)))
     :config
@@ -2471,14 +2478,9 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
 
     (setq org-roam-node-display-template
           (concat "${type:15} ${title:*} " (propertize "${tags:15}" 'face 'org-tag)))
-  
+
     ;; this sets up various file handling hooks so your DB remains up to date
     (org-roam-setup))
-
-
-
-
-
 #+end_src
 * Programming
 :properties:
