--- a/Readme.org
+++ b/Readme.org
@@ -20,10 +20,6 @@ Tested on :
 - Ubuntu 20 LTS
 - Ubuntu 22 LTS
 
-
-
-
-
 ** Pre Installl
 
 At first install =Git=
@@ -64,6 +60,7 @@ See instructions here : https://ohmyz.sh/#install
 *** Asdf
 I try to install all my tools with [[https://github.com/asdf-vm/asdf][Asdf]] 
 *** Java
+
 #+begin_src shell
   asdf plugin-add java
   asdf plugin-add maven
@@ -75,6 +72,12 @@ I try to install all my tools with [[https://github.com/asdf-vm/asdf][Asdf]]
   asdf plugin-add leiningen
 #+end_src
 
+I now almost exclusively use [[https://clojure.org/guides/deps_and_cli][deps.edn]] to build my projects with Clojure CLI.
+My configuration comes from [[https://github.com/practicalli/clojure-deps-edn]] 
+
+#+begin_src shell
+git clone git@github.com:practicalli/clojure-deps-edn.git $XDG_CONFIG_HOME/clojure
+#+end_src
 
 *** Docker 
 Docker is installed from this script :
