[emacs] Add XDG_CONFIG_HOME in exec-path-from-shell

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -178,7 +178,7 @@ This happens a lot on OS X, where an Emacs instance started from the GUI inherit
         ;; (exec-path-from-shell-copy-env "GOPATH")
         ;;(exec-path-from-shell-copy-env "JAVA_HOME")
         ;; (exec-path-from-shell-copy-env "PATH")
-        ;; (exec-path-from-shell-copy-env "RUST_SRC_PATH")
+        (exec-path-from-shell-copy-env "XDG_CONFIG_HOME")
         )))
 #+end_src
 
