Switch to JetBrains font on MacOs

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -516,7 +516,7 @@ Use Input Font (http://input.fontbureau.com/)  on Linux, Monaco on MacOS
     (when is-linux
       (set-frame-font "Jetbrains Mono 13" nil t))
     (when is-mac
-      (set-frame-font "Monaco 15" nil t))
+      (set-frame-font "Jetbrains Mono 14" nil t))
     (when is-windows
       (set-frame-font "Consolas" nil t))
     )
